--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,8 @@ litellm==1.69.3
 loguru==0.7.2
 msrest==0.7.1
 openai>=1.55.3
-pytest==7.4.0
+pytest==8.2.0
+pytest-asyncio==0.26.0
 PyGithub==1.59.*
 PyYAML==6.0.1
 python-gitlab==3.15.0
