--- a/.github/workflows/pr-agent-review.yaml
+++ b/.github/workflows/pr-agent-review.yaml
@@ -5,8 +5,10 @@
 name: PR-Agent
 
 on:
-# pull_request:
-# issue_comment:
+  pull_request:
+    types: [opened, synchronize, reopened]
+  # issue_comment:
+  #   types: [created]
   workflow_dispatch:
 
 permissions:
