--- a/.github/workflows/pr-agent-review.yaml
+++ b/.github/workflows/pr-agent-review.yaml
@@ -18,13 +18,19 @@ permissions:
 jobs:
   pr_agent_job:
     runs-on: ubuntu-latest
-    name: Run pr agent on every pull request
+    name: Run Kaito PR Agent
     steps:
-      - name: PR Agent action step
-        id: pragent
-        uses: kaito-project/kaito-pr-agent@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_ACTION_CONFIG.AUTO_DESCRIBE: true
-          GITHUB_ACTION_CONFIG.AUTO_REVIEW: true
-          GITHUB_ACTION_CONFIG.AUTO_IMPROVE: true
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Run Kaito PR Agent
+        uses: ./.github/actions/kaito-pr-agent
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          openai_key: ${{ secrets.OPENAI_KEY }}
+          azure_openai_endpoint: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
+          azure_openai_key: ${{ secrets.AZURE_OPENAI_API_KEY }}
+          anthropic_key: ${{ secrets.ANTHROPIC_API_KEY }}
+          auto_describe: 'true'
+          auto_review: 'true'
+          auto_improve: 'true'
