--- a/.github/workflows/pr-agent-review.yaml
+++ b/.github/workflows/pr-agent-review.yaml
@@ -20,8 +20,11 @@ jobs:
     runs-on: ubuntu-latest
     name: Run Kaito PR Agent
     steps:
-      - name: Checkout repository
+      - name: Checkout current repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 1
 
       - name: Run Kaito PR Agent
         uses: ./.github/actions/kaito-pr-agent
