--- a/.github/workflows/pr-agent-review.yaml
+++ b/.github/workflows/pr-agent-review.yaml
@@ -84,9 +84,12 @@ jobs:
           OPENAI.API_BASE: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
           OPENAI.DEPLOYMENT_ID: ${{ secrets.AZURE_OPENAI_DEPLOYMENT_ID }}
           OPENAI.KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
+          # LiteLLM configuration for O-series models
+          LITELLM_DROP_PARAMS: "true"
           # Configuration
-          CONFIG.MODEL: ${{ secrets.AZURE_OPENAI_MODEL || 'gpt-4' }}
-          CONFIG.FALLBACK_MODELS: '["gpt-4", "gpt-3.5-turbo"]'
+          CONFIG.MODEL: ${{ secrets.AZURE_OPENAI_MODEL || 'o4-mini' }}
+          CONFIG.FALLBACK_MODELS: '["o4-mini", "o3-mini"]'
+          CONFIG.TEMPERATURE: "1"
           GITHUB_ACTION_CONFIG.AUTO_DESCRIBE: true
           GITHUB_ACTION_CONFIG.AUTO_REVIEW: true
           GITHUB_ACTION_CONFIG.AUTO_IMPROVE: true
