--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -9,6 +9,11 @@ on:
   # schedule:
   #   - cron: '0 2 * * *' # Run nightly at 2 AM UTC
 
+permissions:
+  contents: write
+  pull-requests: write
+  issues: write
+
 jobs:
   pr_agent_job:
     runs-on: ubuntu-latest
