--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -45,10 +45,24 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
+      - name: Debug GitHub App Token
+        run: |
+          echo "Token generated: ${{ steps.generate_token.outputs.token != '' }}"
+          # Test basic API access
+          curl -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
+               -H "Accept: application/vnd.github.v3+json" \
+               https://api.github.com/repos/kaito-project/kaito-pr-agent
+
       - id: test1
         name: E2E test github app
         run: |
-          docker run -e GITHUB.USER_TOKEN=${{ steps.generate_token.outputs.token }} --rm kaito-project/kaito-pr-agent:test pytest -v tests/e2e_tests/test_github_app.py
+          # Use GitHub App token if available, otherwise fallback to PAT
+          TOKEN="${{ steps.generate_token.outputs.token || secrets.E2E_GITHUB_TOKEN }}"
+          if [ -z "$TOKEN" ]; then
+            echo "ERROR: No token available. Please set either GitHub App secrets (APP_ID, APP_PRIVATE_KEY) or E2E_GITHUB_TOKEN"
+            exit 1
+          fi
+          docker run -e GITHUB.USER_TOKEN="$TOKEN" --rm kaito-project/kaito-pr-agent:test pytest -v tests/e2e_tests/test_github_app.py
 
       # - id: test2
       #   name: E2E gitlab webhook
