--- a/.github/workflows/pr-agent-review.yaml
+++ b/.github/workflows/pr-agent-review.yaml
@@ -1,32 +1,65 @@
-# This workflow enables developers to call PR-Agents `/[actions]` in PR's comments and upon PR creation.
-# Learn more at https://www.codium.ai/pr-agent/
-# This is v0.2 of this workflow file
 
-name: PR-Agent
+# DISABLED WORKFLOW - EXAMPLE ONLY
+# This workflow is disabled and serves as an example of how to configure 
+# Kaito PR-Agent with custom model endpoints and configurations.
+# To use this workflow, uncomment the 'on:' triggers below.
 
+name: PRAgent (Example - Disabled)
 on:
-# pull_request:
-# issue_comment:
-  workflow_dispatch:
-
-permissions:
-  issues: write
-  pull-requests: write
+  # This workflow is disabled - uncomment below to enable
+  # pull_request:
+  #   branches: ["*"]
+  # issue_comment:
+  #   types: [created]
+  workflow_dispatch: # Manual trigger only for testing
 
 jobs:
   pr_agent_job:
+    if: ${{ github.event.sender.type != 'Bot' }}
     runs-on: ubuntu-latest
-    name: Run pr agent on every pull request
+    permissions:
+      issues: write
+      pull-requests: write
+      contents: write
+    name: Run PR Agent on every pull request, respond to user comments
     steps:
-      - name: PR Agent action step
-        id: pragent
-        uses: Codium-ai/pr-agent@main
-        env:
-          OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
-          OPENAI_ORG: ${{ secrets.OPENAI_ORG }} # optional
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PINECONE.API_KEY: ${{ secrets.PINECONE_API_KEY }}
-          PINECONE.ENVIRONMENT: ${{ secrets.PINECONE_ENVIRONMENT }}
-          GITHUB_ACTION_CONFIG.AUTO_DESCRIBE: true
-          GITHUB_ACTION_CONFIG.AUTO_REVIEW: true
-          GITHUB_ACTION_CONFIG.AUTO_IMPROVE: true
+    - name: Check Model Endpoint
+      run: |
+        curl -X GET "${{ secrets.KAITO_PR_REVIEWER_WORKSPACE_URL }}/models" -v
+    
+    - name: PR Agent action step
+      id: pragent
+      uses: kaito-project/kaito-pr-agent@main
+      env:
+        CONFIG.MODEL: "hosted_vllm/qwen2.5-coder-7b-instruct"
+
+        CONFIG.CUSTOM_MODEL_MAX_TOKENS: "32768"
+        CONFIG.DUPLICATE_EXAMPLES: "true"
+
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB.USER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+        OLLAMA.API_BASE: ${{ secrets.KAITO_PR_REVIEWER_WORKSPACE_URL }}
+        litellm.set_verbose: True
+
+          # PR Agent configuration options
+        #   pr_description.use_description_markers: "true"
+        #   pr_description.include_generated_by_header: "true"
+        #   github_action.auto_review: "true"
+        #   github_action.auto_describe: "true"
+        #   github_action.auto_improve: "true"
+        #   pr_update_changelog.push_changelog_changes: "true"
+
+# Run using docker
+#      - name: Run PR Agent
+#        id: pragent
+#        run: |
+#          docker run --rm -it \
+#            -e CONFIG.MODEL="hosted_vllm/qwen2.5-coder-7b-instruct" \
+#            -e CONFIG.FALLBACK_MODELS="hosted_vllm/qwen2.5-coder-7b-instruct" \
+#            -e CONFIG.CUSTOM_MODEL_MAX_TOKENS="32768" \
+#            -e CONFIG.DUPLICATE_EXAMPLES="true" \
+#            -e GITHUB.USER_TOKEN="${{ secrets.API_TOKEN }}" \
+#            -e GITHUB.DEPLOYMENT_TYPE="user" \
+#            -e OLLAMA.API_BASE="http://host.docker.internal:5000/v1" \
+#            kaito-project/kaito-pr-agent:latest --pr_url ${{ github.event.pull_request.html_url
