--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -7,7 +7,7 @@ name: PR-Agent E2E Tests
 # modified code and running end-to-end tests against it.
 # 
 # Purpose: Validate that your code changes work correctly before merging
-# Trigger: Pull requests, pushes to main, or manual triggers
+# Trigger: Pull requests to main, or manual triggers
 # Code Used: YOUR MODIFIED CODE (builds fresh Docker image from your branch)
 # 
 # =============================================================================
@@ -15,8 +15,6 @@ name: PR-Agent E2E Tests
 on:
   workflow_dispatch:
   pull_request:
-    branches: [main]
-  push:
     branches: [main]
   # schedule:
   #   - cron: '0 2 * * *' # Run nightly at 2 AM UTC
