--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -1,4 +1,13 @@
-name: Build-and-test
+name: Unit Test
+
+# =============================================================================
+# UNIT TEST WORKFLOW
+# =============================================================================
+# This workflow validates code changes by building Docker images and running unit tests
+# 
+# Purpose: Quality gate for PRs and main branch
+# Note: This does NOT publish images (see docker-release.yaml for that)
+# =============================================================================
 
 on:
   push:
