--- a/deploy/k8s/kaito-workspace-loadbalancer.yaml
+++ b/deploy/k8s/kaito-workspace-loadbalancer.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pr-agent-loadbalancer
+  name: kaito-workspace-loadbalancer
 spec:
   type: LoadBalancer
   selector:
