skip tests when appropriate

--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -27,7 +27,8 @@ concurrency:
 jobs:
   e2e_test:
     # Skip E2E test PRs to avoid infinite recursion
-    if: ${{ !contains(github.event.pull_request.title, '[E2E Test]') && !contains(github.event.pull_request.head.ref, 'e2e-test-') }}
+    # This checks: PR title doesn't contain [E2E Test], branch name doesn't start with e2e-test-, and PR title doesn't contain e2e-test-
+    if: ${{ !contains(github.event.pull_request.title, '[E2E Test]') && !startsWith(github.event.pull_request.head.ref, 'e2e-test-') && !contains(github.event.pull_request.title, 'e2e-test-') }}
     runs-on: [ "self-hosted", "hostname:kaito-e2e-github-runner-2" ]
     permissions:
       contents: read
