--- a/.github/workflows/code_coverage.yaml
+++ b/.github/workflows/code_coverage.yaml
@@ -12,7 +12,7 @@ on:
 jobs:
   build-and-test:
     # Skip E2E test PRs to avoid unnecessary resource usage
-    if: ${{ !contains(github.event.pull_request.title, '[E2E Test]') && !contains(github.event.pull_request.head.ref, 'e2e-test-') }}
+    if: ${{ !contains(github.event.pull_request.title, '[E2E Test]') && !startsWith(github.event.pull_request.head.ref, 'e2e-test-') && !contains(github.event.pull_request.title, 'e2e-test-') }}
     runs-on: ubuntu-latest
 
     steps:
