--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -81,14 +81,48 @@ jobs:
 
       - name: Run E2E Test
         env:
+          # GitHub configuration
           GITHUB.USER_TOKEN: ${{ secrets.E2E_GITHUB_TOKEN }}
           GITHUB.DEPLOYMENT_TYPE: user
-          # Kaito backend configuration
+          
+          # Model configuration (matching .secrets.toml)
           CONFIG.MODEL: "hosted_vllm/qwen2.5-coder-32b-instruct"
+          CONFIG.FALLBACK_MODELS: "hosted_vllm/qwen2.5-coder-32b-instruct"
           CONFIG.CUSTOM_MODEL_MAX_TOKENS: "32768"
           CONFIG.DUPLICATE_PROMPT_EXAMPLES: "true"
           CONFIG.AI_TIMEOUT: "600"
+          
+          # Ollama/Kaito endpoint configuration
           OLLAMA.API_BASE: ${{ secrets.KAITO_PR_REVIEWER_WORKSPACE_URL }}
+          
+          # GitHub event handling (matching .secrets.toml settings)
+          GITHUB.HANDLE_PR_ACTIONS: "opened,reopened,ready_for_review"
+          GITHUB.HANDLE_PUSH_TRIGGER: "true"
+          GITHUB.PUSH_TRIGGER_IGNORE_BOT_COMMITS: "true"
+          GITHUB.PUSH_TRIGGER_IGNORE_MERGE_COMMITS: "true"
+          GITHUB.PUSH_TRIGGER_WAIT_FOR_INITIAL_REVIEW: "true"
+          GITHUB.PR_COMMANDS: "/describe,/review,/improve"
+          GITHUB.PUSH_COMMANDS: "/describe,/review,/improve"
+          
+          # PR Description settings (matching .secrets.toml)
+          PR_DESCRIPTION.PUBLISH_DESCRIPTION_AS_COMMENT: "true"
+          PR_DESCRIPTION.PUBLISH_DESCRIPTION_AS_COMMENT_PERSISTENT: "true"
+          PR_DESCRIPTION.ENABLE_PR_TYPE: "false"
+          PR_DESCRIPTION.ADD_ORIGINAL_USER_DESCRIPTION: "false"
+          PR_DESCRIPTION.GENERATE_AI_TITLE: "true"
+          PR_DESCRIPTION.FINAL_UPDATE_MESSAGE: "false"
+          
+          # PR Reviewer settings (matching .secrets.toml)
+          PR_REVIEWER.FINAL_UPDATE_MESSAGE: "false"
+          
+          # PR Code Suggestions settings
+          PR_CODE_SUGGESTIONS.PUBLISH_OUTPUT_NO_SUGGESTIONS: "false"
+          
+          # Output configuration
+          CONFIG.PUBLISH_OUTPUT: "true"
+          CONFIG.VERBOSITY_LEVEL: "1"
+          
+          # E2E Test specific
           E2E_DOCKER_IMAGE: ${{ steps.image_tag.outputs.image_tag }}
           PYTHONPATH: ${{ github.workspace }}
         run: |
