feat: Cleanup some env vars

--- a/.github/workflows/pr-agent-review.yaml
+++ b/.github/workflows/pr-agent-review.yaml
@@ -86,9 +86,8 @@ jobs:
       id: pragent
       uses: kaito-project/kaito-pr-agent@main  # Uses production version
       env:
-        # Model configuration (matching .secrets.toml)
+        # Model configuration
         CONFIG.MODEL: "hosted_vllm/qwen2.5-coder-32b-instruct"
-        CONFIG.FALLBACK_MODELS: "hosted_vllm/qwen2.5-coder-32b-instruct"
         CONFIG.CUSTOM_MODEL_MAX_TOKENS: "32768"
         CONFIG.DUPLICATE_PROMPT_EXAMPLES: "true"
         CONFIG.AI_TIMEOUT: "600"
@@ -98,44 +97,25 @@ jobs:
         GITHUB.USER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB.DEPLOYMENT_TYPE: "user"
         
-        # Ollama/Kaito endpoint configuration
+        # Kaito endpoint
         OLLAMA.API_BASE: ${{ secrets.KAITO_PR_REVIEWER_WORKSPACE_URL }}
         
-        # GitHub event handling
-        GITHUB.HANDLE_PR_ACTIONS: "opened,reopened,ready_for_review"
-        GITHUB.HANDLE_PUSH_TRIGGER: "true"
-        GITHUB.PUSH_TRIGGER_IGNORE_BOT_COMMITS: "true"
-        GITHUB.PUSH_TRIGGER_IGNORE_MERGE_COMMITS: "true"
-        GITHUB.PUSH_TRIGGER_WAIT_FOR_INITIAL_REVIEW: "true"
-        GITHUB.PUSH_TRIGGER_PENDING_TASKS_BACKLOG: "true"
-        GITHUB.PUSH_TRIGGER_PENDING_TASKS_TTL: "300"
-        GITHUB.PR_COMMANDS: "/describe,/review,/improve"
-        GITHUB.PUSH_COMMANDS: "/describe,/review,/improve"
+        # GitHub Action configuration (critical for event handling)
+        GITHUB_ACTION_CONFIG.AUTO_DESCRIBE: "true"
+        GITHUB_ACTION_CONFIG.AUTO_REVIEW: "true"
+        GITHUB_ACTION_CONFIG.AUTO_IMPROVE: "true"
+        GITHUB_ACTION_CONFIG.PR_ACTIONS: "opened,reopened,ready_for_review,synchronize"
         
-        # PR Description settings
+        # PR Description settings (key settings from .secrets.toml)
         PR_DESCRIPTION.PUBLISH_DESCRIPTION_AS_COMMENT: "true"
-        PR_DESCRIPTION.PUBLISH_DESCRIPTION_AS_COMMENT_PERSISTENT: "true"
-        PR_DESCRIPTION.ENABLE_PR_TYPE: "false"
-        PR_DESCRIPTION.ADD_ORIGINAL_USER_DESCRIPTION: "false"
         PR_DESCRIPTION.GENERATE_AI_TITLE: "true"
         PR_DESCRIPTION.FINAL_UPDATE_MESSAGE: "false"
         
         # PR Reviewer settings
         PR_REVIEWER.FINAL_UPDATE_MESSAGE: "false"
-        PR_REVIEWER.ENABLE_REVIEW_LABELS_EFFORT: "true"
-        PR_REVIEWER.ENABLE_AUTO_APPROVAL: "false"
-        
-        # PR Code Suggestions settings
-        PR_CODE_SUGGESTIONS.PUBLISH_OUTPUT_NO_SUGGESTIONS: "false"
-        
-        # GitHub Action specific configuration
-        GITHUB_ACTION_CONFIG.AUTO_DESCRIBE: "true"
-        GITHUB_ACTION_CONFIG.AUTO_REVIEW: "true"
-        GITHUB_ACTION_CONFIG.AUTO_IMPROVE: "true"
         
         # Output configuration
         CONFIG.PUBLISH_OUTPUT: "true"
-        CONFIG.VERBOSITY_LEVEL: "1"
 
     - name: Review Summary
       if: always()
